--- a/pom.xml
+++ b/pom.xml
@@ -6,19 +6,30 @@
     <parent>
         <groupId>org.jenkins-ci.plugins</groupId>
         <artifactId>plugin</artifactId>
-        <version>2.11</version>
+        <version>4.88</version>
         <relativePath/>
     </parent>
     <groupId>com.starrocks</groupId>
     <artifactId>lkbotv2-notifier</artifactId>
-    <version>1.0.0-SNAPSHOT</version>
+    <version>2.0.0</version>
     <packaging>hpi</packaging>
 
     <properties>
-        <jenkins.version>2.7.3</jenkins.version>
-        <java.level>8</java.level>
-        <jenkins-test-harness.version>2.13</jenkins-test-harness.version>
+        <java.level>11</java.level>
+        <jenkins.version>2.426.3</jenkins.version>
     </properties>
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <configuration>
+                    <source>7</source>
+                    <target>7</target>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
 
     <name>Botv2 Notification Plugin</name>
     <description>Botv2 Notification Plugin</description>
@@ -45,12 +56,12 @@
     </scm>
     <repositories>
         <repository>
-            <id>jitpack.io</id>
-            <url>https://jitpack.io</url>
-        </repository>
-        <repository>
             <id>repo.jenkins-ci.org</id>
             <url>https://repo.jenkins-ci.org/public/</url>
+        </repository>
+        <repository>
+            <id>jitpack.io</id>
+            <url>https://jitpack.io</url>
         </repository>
     </repositories>
     <pluginRepositories>
@@ -61,9 +72,9 @@
     </pluginRepositories>
     <dependencies>
         <dependency>
-            <groupId>org.apache.httpcomponents</groupId>
-            <artifactId>httpclient</artifactId>
-            <version>4.5.13</version>
+            <groupId>org.apache.httpcomponents.client5</groupId>
+            <artifactId>httpclient5</artifactId>
+            <version>5.2.1</version>
         </dependency>
         <dependency>
             <groupId>com.alibaba</groupId>
