--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,7 @@
     </parent>
     <groupId>com.starrocks</groupId>
     <artifactId>lkbotv2-notifier</artifactId>
-    <version>2.0.0</version>
+    <version>2.1.0-SNAPSHOT</version>
     <packaging>hpi</packaging>
 
     <properties>
